<resources>
	<string name="reminders_tab">Reminders</string>
	<string name="drugs_tab">Drugs</string>
	<string name="meals_tab">Meals</string>
	<string name="app_name">Drugs reminder</string>
	<string name="settings_tab">Settings</string>
	<string name="time">"Time: "</string>
	<string name="empty_hint">It is empty now</string>
	<string name="reminder_time_format">%1$s %2$s %3$s</string>
	<string name="before">before</string>
	<string name="after">after</string>
	<string name="next_time">Next time:</string>
	<string name="edit_meal">Create / edit a meal</string>
	<string name="quit_hint">You have unsaved changes.</string>
	<string name="name">"Name: "</string>
	<string name="meal_name_hint">For example, lunch</string>
	<string name="delete_meal">Delete the meal</string>
	<string name="name_empty_hint">Please set a name for it.</string>
	<string name="positive_text">OK</string>
	<string name="negative_text">Cancel</string>
	<string name="delete_hint">Be sure to delete it.</string>
	<string name="edit_drug">Create / edit a drug</string>
	<string name="drug_name_hint">For example, cephalosporin</string>
	<string name="image">Image:</string>
	<string name="delete_drug">Delete the drug</string>
	<string name="select_from_album">Select from album</string>
	<string name="take_from_camera">Take from camera</string>
	<string name="no_camera_hint">There is no camera app on your device.</string>
	<string name="no_album_hint">There is no album app on your device.</string>
	<string name="fail_load_image">Failed to load your image.</string>
	<string name="edit_reminder">Create / edit a reminder</string>
	<string name="meals">Meals:</string>
	<string name="drugs">Drugs:</string>
	<string name="before_or_after">Before / after:</string>
	<string name="add_a_drug">Add a drug</string>
	<string name="usage_dosage">Usage &amp; dosage:</string>
	<string name="usage_dosage_hint">For example, oral, 2 tablets</string>
	<string name="comma">", "</string>
	<string name="delete_reminder">Delete the reminder</string>
	<string name="drugs_empty_hint">Add at least 1 drug for the reminder.</string>
	<string name="meals_empty_hint">Designate at least 1 meal for the reminder.</string>
	<string name="before_after_empty_hint">Set the reminder before / after meal.</string>
	<string name="reminder_next_time_format">%s later</string>
	<string name="time_format" formatted="false">%dh%dm</string>
	<string name="involved_hint">Involved in certain reminder(s), it cannot be deleted. Delete the involving reminder(s)?</string>
	<string name="ringtone">Ringtone:</string>
	<string name="default_ringtone">Default ringtone</string>
	<string name="set_ringtone">Change the ringtone</string>
	<string name="frequency">Frequency:</string>
	<string name="every">Every</string>
	<string name="days">day(s)</string>
	<string name="save">Save</string>
	<string name="time_format_without_hour">%dm</string>
	<string name="day_format">%dd</string>
	<string name="alarm_title">It is time to take drugs!</string>
	<string name="reminder_preference_category_title">Reminders settings</string>
	<string name="starting_day">Starting day:</string>
	<string name="reminder_advance_time_preference_title">The time of notification in advance to the alarm</string>
	<string name="reminder_advance_time_preference_summary">The app can send a notification before a reminder actually alarms. You can set how early it is. If you set the time to be 0, the function will be disabled.</string>
	<string name="reminder_ringtone_preference_title">The ringtone of alarms</string>
	<string name="reminder_ringtone_preference_summary">Set the ringtone of alarms fired when it is time to take drugs.</string>
	<string name="reminder_vibration_preference_title">Vibration when alarming</string>
	<string name="reminder_vibration_preference_summary">Set whether the phone will vibrate when alarming.</string>
	<string name="others_preference_category_title">Others</string>
	<string name="other_about_preference_title">About</string>
	<string name="reminder_starting_day_preference_title">The algorithm used to determine the date of the first alarm</string>
	<string name="reminder_starting_day_preference_summary">You can choose one of the three available types of algorithms.</string>
	<string name="other_about_preference_summary">Information about the app, the developer, etc.</string>
	<string name="version_name" translatable="false">0.9.1</string>
	<string name="author">Author:</string>
	<string name="ulysses">Ulysses Zhan</string>
	<string name="email">E-mail:</string>
	<string name="email_content">UlyssesZhan@gmail.com</string>
	<string name="wechat">WeChat:</string>
	<string name="qq">QQ:</string>
	<string name="wechat_content">youqiu_</string>
	<string name="qq_content">2938747508</string>
	<string name="about_info">The app is an open-source project.</string>
	<string name="config_preference_category_title">Configuration settings</string>
	<!--<string name="config_delay_preference_title">Delaying amount of time</string>
	<string name="config_delay_preference_summary">If you enable the pre-alarm notifications, you can delay the next alarm temporarily. You can set how much time it can be delayed for.</string>-->
	<string name="config_reset_starting_preference_title">The reminder will restart after re-enabled</string>
	<string name="config_reset_starting_preference_summary">You can re-enable a reminder by toggling on the switch next to it. You can set whether a reminder will re-calculate its starting day after re-enabled. If you have chosen to pick the starting day by yourself in the above settings, this setting does not matter.</string>
	<string name="other_source_preference_title">View source / feedback</string>
	<string name="other_source_preference_summary">The app is an open-source project, so be free to view its source on the GitHub page. You can also send feedback by reporting issues on it.</string>
	<string name="config_default_frequency_preference_title">The default period of a reminder</string>
	<string name="config_default_frequency_preference_summary">You can set the frequency for each reminder you created. You can set the default value of it.</string>
	<string name="other_reset_preference_title">Reset all settings to default</string>
	<string name="other_reset_preference_summary">You can reset all settings you modified above by applying this.</string>
	<string name="comfirm_reset_settings_hint">Be sure to reset all the settings.</string>
	<string name="channel_for_reminding_advance_name">Reminding in advance</string>
	<string name="channel_for_reminding_advance_description">The notification channel for reminding in advance to alarming.</string>
	<string name="notification_for_reminding_advance_content_title_format">You will take drugs in %s.</string>
	<string name="notification_for_reminding_advance_content_text_format">You will soon need to take %s.</string>
	<!--<string name="delay_format">Delay for %s</string>-->
	<string name="reminder_auto_close_time_preference_title">The time for which an alaram to auto-close</string>
	<string name="reminder_auto_close_time_preference_summary">The alarm will close itself automatically if it has rung for a specified period of time. You can disable the function by setting the time to 0.</string>
	<string name="other_q_and_a_preference_title">Q &amp; A</string>
	<string name="other_q_and_a_preference_summary">If you have any questions, see here first.</string>
	<string name="channel_for_auto_close_hint_name">Alarms auto-close hint</string>
	<string name="channel_for_auto_close_hint_description">The notification channel for informing the user of the auto-closing of an alarm.</string>
	<string name="notification_for_auto_close_content_title">The alarm has fired.</string>
	<string name="notification_for_auto_close_content_text_format">You should have taken %s.</string>
	<string name="channel_for_background_tasks_name">Background tasks</string>
	<string name="channel_for_background_tasks_description">The notification channel for background tasks</string>
	<string name="notification_for_background_tasks_content_title">Drugs reminder is running in background.</string>
	<string name="notification_for_background_tasks_content_text">Tap to open the app.</string>
	<string name="system_alert_window_permission_warning">Warning: On this version of Android, alarms may not show up when the app is running in background.</string>
	<string name="permission_hint">You need to grant some permissions for the app, overwise it will not work appropriately.</string>
	<string name="settings">Settings</string>
	<string name="config_grant_permissions_preference_title">Grant permissions</string>
	<string name="config_grant_permissions_preference_summary">If the app is not working appropriately, maybe there are some key permissions you need to grant.</string>
	<string name="config_allow_auto_start_preference_title">Allow autostarting</string>
	<string name="config_allow_auto_start_preference_summary">Allow the app to autostart to make it run more steadily.</string>
	<string name="neednt_auto_start_hint">On this device, you do not need to allow autostarting.</string>
	<string name="temporary_hint">Delayed reminder</string>
	<string name="cancel_delaying_hint">Be sure to cancel the delayed reminder.</string>
	<string name="delay_for">Delay for</string>
	<string name="reminder_delay_preference_title">The basic amount of delay</string>
	<string name="reminder_delay_preference_summary">You can delay a reminder when it fires an alarm. The amount for which you can delay is one to four times of the amount you specified here.</string>
	<string name="init_log_failed_hint">Failed to initialize log file.</string>
	<string name="clear_log_failed_hint">Failed to clear log file.</string>
	<string name="open_log_failed_hint">Failed to open log file.</string>
	<string name="open_log_succeeded_hint">Succeeded to output log file. Would you like to open it now?</string>
	<string name="test_preference_category_title">Test</string>
	<string name="test_clear_log_preference_title">Clear log file</string>
	<string name="test_clear_log_preference_summary">The app writes log to a log file automatically when running. When you encounter a bug, you should clear the log file and re-trigger the bug, then provide log file to the developer.</string>
	<string name="test_open_log_preference_summary">Open log file which you may provide for the developer.</string>
	<string name="test_open_log_preference_title">Open log file</string>
	<string name="clear_log_succeeded_hint">Succeeded in clearing log file.</string>
</resources>
