<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	tools:context=".activities.AboutActivity"
	android:orientation="vertical">
	<androidx.appcompat.widget.Toolbar
		android:id="@+id/about_toolbar"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		app:title="@string/other_about_preference_title" />
	<ImageView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="center_horizontal"
		app:srcCompat="@mipmap/ic_launcher"
		android:paddingStart="@dimen/activity_horizontal_margin"
		android:paddingEnd="@dimen/activity_horizontal_margin"
		android:paddingTop="@dimen/activity_vertical_margin"
		android:paddingBottom="@dimen/activity_vertical_margin" />
	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="center_horizontal"
		android:text="@string/app_name"
		android:paddingStart="@dimen/activity_horizontal_margin"
		android:paddingEnd="@dimen/activity_horizontal_margin"
		android:paddingTop="@dimen/activity_vertical_margin" />
	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="center_horizontal"
		android:text="@string/version_name"
		android:paddingStart="@dimen/activity_horizontal_margin"
		android:paddingEnd="@dimen/activity_horizontal_margin"
		android:paddingBottom="@dimen/activity_vertical_margin" />
	<ScrollView
		android:layout_width="match_parent"
		android:layout_height="match_parent">
		<TableLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content">
			<TableRow>
				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/author"
					android:paddingStart="@dimen/activity_horizontal_margin"
					android:paddingEnd="@dimen/activity_horizontal_margin"
					android:paddingTop="@dimen/activity_vertical_margin"
					android:paddingBottom="@dimen/activity_vertical_margin" />
				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/ulysses"
					android:paddingStart="@dimen/activity_horizontal_margin"
					android:paddingEnd="@dimen/activity_horizontal_margin"
					android:paddingTop="@dimen/activity_vertical_margin"
					android:paddingBottom="@dimen/activity_vertical_margin" />
			</TableRow>
			<TableRow>
				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/email"
					android:paddingStart="@dimen/activity_horizontal_margin"
					android:paddingEnd="@dimen/activity_horizontal_margin"
					android:paddingTop="@dimen/activity_vertical_margin"
					android:paddingBottom="@dimen/activity_vertical_margin" />
				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/email_content"
					android:paddingStart="@dimen/activity_horizontal_margin"
					android:paddingEnd="@dimen/activity_horizontal_margin"
					android:paddingTop="@dimen/activity_vertical_margin"
					android:paddingBottom="@dimen/activity_vertical_margin" />
			</TableRow>
			<TableRow>
				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/wechat"
					android:paddingStart="@dimen/activity_horizontal_margin"
					android:paddingEnd="@dimen/activity_horizontal_margin"
					android:paddingTop="@dimen/activity_vertical_margin"
					android:paddingBottom="@dimen/activity_vertical_margin" />
				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/wechat_content"
					android:paddingStart="@dimen/activity_horizontal_margin"
					android:paddingEnd="@dimen/activity_horizontal_margin"
					android:paddingTop="@dimen/activity_vertical_margin"
					android:paddingBottom="@dimen/activity_vertical_margin" />
			</TableRow>
			<TableRow>
				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/qq"
					android:paddingStart="@dimen/activity_horizontal_margin"
					android:paddingEnd="@dimen/activity_horizontal_margin"
					android:paddingTop="@dimen/activity_vertical_margin"
					android:paddingBottom="@dimen/activity_vertical_margin" />
				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/qq_content"
					android:paddingStart="@dimen/activity_horizontal_margin"
					android:paddingEnd="@dimen/activity_horizontal_margin"
					android:paddingTop="@dimen/activity_vertical_margin"
					android:paddingBottom="@dimen/activity_vertical_margin" />
			</TableRow>
			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/about_info"
				android:paddingStart="@dimen/activity_horizontal_margin"
				android:paddingEnd="@dimen/activity_horizontal_margin"
				android:paddingTop="@dimen/activity_vertical_margin"
				android:paddingBottom="@dimen/activity_vertical_margin" />
		</TableLayout>
	</ScrollView>
</LinearLayout>
