<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	tools:activity=".activities.EditDrugActivity"
	android:orientation="vertical">
	<androidx.appcompat.widget.Toolbar
		android:id="@+id/edit_toolbar"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		app:title="@string/edit_drug" />
	<ScrollView
		android:layout_width="match_parent"
		android:layout_height="match_parent">
		<TableLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:stretchColumns="1">
			<TableRow>
				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:paddingStart="@dimen/activity_horizontal_margin"
					android:paddingTop="@dimen/activity_vertical_margin"
					android:paddingEnd="@dimen/activity_horizontal_margin"
					android:paddingBottom="@dimen/activity_vertical_margin"
					android:text="@string/name" />
				<EditText
					android:id="@+id/edit_drug_name"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:hint="@string/drug_name_hint"
					android:paddingStart="@dimen/activity_horizontal_margin"
					android:paddingTop="@dimen/activity_vertical_margin"
					android:paddingEnd="@dimen/activity_horizontal_margin"
					android:paddingBottom="@dimen/activity_vertical_margin" />
			</TableRow>
			<TableRow>
				<TextView
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:paddingStart="@dimen/activity_horizontal_margin"
					android:paddingTop="@dimen/activity_vertical_margin"
					android:paddingEnd="@dimen/activity_horizontal_margin"
					android:paddingBottom="@dimen/activity_vertical_margin"
					android:text="@string/image" />
				<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:orientation="vertical">
					<ImageView
						android:id="@+id/drug_image_view"
						android:layout_width="match_parent"
						android:layout_height="wrap_content" />
					<Button
						android:id="@+id/select_from_album"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:text="@string/select_from_album" />
					<Button
						android:id="@+id/take_from_camera"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:text="@string/take_from_camera" />
				</LinearLayout>
			</TableRow>
			<Button
				android:id="@+id/edit_delete"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="@string/delete_drug" />
		</TableLayout>
	</ScrollView>
</LinearLayout>