<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:orientation="vertical">
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal">
		<ImageView
			android:id="@+id/edit_reminder_drug_image"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:paddingStart="@dimen/activity_horizontal_margin"
			android:paddingEnd="@dimen/activity_horizontal_margin"
			android:paddingTop="@dimen/activity_vertical_margin"
			android:paddingBottom="@dimen/activity_vertical_margin" />
		<TextView
			android:id="@+id/edit_reminder_drug_name"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:paddingStart="@dimen/activity_horizontal_margin"
			android:paddingEnd="@dimen/activity_horizontal_margin"
			android:paddingTop="@dimen/activity_vertical_margin"
			android:paddingBottom="@dimen/activity_vertical_margin" />
	</LinearLayout>
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal">
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/usage_dosage"
			android:paddingStart="@dimen/activity_horizontal_margin"
			android:paddingEnd="@dimen/activity_horizontal_margin"
			android:paddingTop="@dimen/activity_vertical_margin"
			android:paddingBottom="@dimen/activity_vertical_margin" />
		<EditText
			android:id="@+id/edit_reminder_drug_usage_dosage"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:hint="@string/usage_dosage_hint"
			android:paddingStart="@dimen/activity_horizontal_margin"
			android:paddingEnd="@dimen/activity_horizontal_margin"
			android:paddingTop="@dimen/activity_vertical_margin"
			android:paddingBottom="@dimen/activity_vertical_margin" />
	</LinearLayout>
	<Button
		android:id="@+id/edit_reminder_delete_drug"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/delete_drug" />
</LinearLayout>
